--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - "python manage.py test && flake8"
+  - "python manage.py test --settings=recipe_app_api.settings.local && flake8"
